@startuml
'https://plantuml.com/class-diagram
hide circle
class SubscriptionsRepository <<interface>>
class UserRepository <<interface>>


class Subscriptions {
    -startDate
    -endDate
    -paymentType
    -activeStatus
    +checkChange(long desiredVersion): void
}



class SubscriptionsViewMapper{
    +toSubscriptionsView(Subscription subscriptions):SubscriptionsView
}
class SubscriptionsController{
    +renewAnualSubscription(final WebRequest request):ResponseEntity<SubscriptionsView>
    }
class SubscriptionsService{
 +renewAnualSubscription(long desiredVersion):Subscriptions

}


interface UserRepository
{
+findById(Long objectId): Optional<User>
}


interface SubscriptionsRepository
{
+findByActiveStatus_ActiveAndUser(boolean active, User user): Optional<Subscriptions>
+save(S entity) : <S extends Subscriptions>
}



SubscriptionsController ..> SubscriptionsService: uses >
SubscriptionsService ..> SubscriptionsRepository: uses >
SubscriptionsService ..> UserRepository: uses >
SubscriptionsRepository ..> Subscriptions: < record
SubscriptionsController ..>SubscriptionsViewMapper: uses >
@enduml


